# yandex-backend-copy

./: .gitignore  CMakeLists.txt  Configuration.cpp  DateExtension.cpp  DateExtension.h  Dockerfile  GlobalUtils.h  Includes.h  OnRequest.h  README.md  RequestResolver.cpp  RequestResolver.h  UrlResolvers.h  bitbucket-pipelines.yml  main.cpp
.github/workflows/: pipeline.yml
Model/: FileSystemTree.cpp  FileSystemTree.h  HistoryStorage.cpp  HistoryStorage.h  HttpServer.h
UrlResolve/: UrlParametersContainer.cpp  UrlParametersContainer.h  UrlParser.cpp  UrlParser.h
View/: GetNodesBody.h  ImportBody.h  view_digram.puml
View2/: GetNodeHistoryResponse.h  GetNodeResponse.cpp  GetNodeResponse.h  Item.cpp  Item.h  UpdateResponse.cpp  UpdateResponse.h
application/: Application.cpp  Application.hpp  EchoServer.hpp  LibeventArgs.hpp  Query.hpp  QueryResponder.hpp  model_diagram.puml  query.cpp
bench/: main.cpp
bench/validation/: validation_bench.cpp  validation_bench.hpp
deploy/: Dockerfile  docker-compose.yml  docker_postgres_init.sql  run_server.sh
sql/: get_nodes.sql  schema.sql  stupid_import.sql
sql_stuff/: init.sql  tables.sql  triggers.sql  views.sql
src/: CMakeLists.txt  Configuration.cpp  Configuration.h  GlobalUtils.cpp  GlobalUtils.h  Includes.h  OnRequest.h  UrlResolvers.h  main.cpp
src/Model/: FileSystemTree.cpp  FileSystemTree.h  FileSystemTree.hpp  HistoryStorage.cpp  HistoryStorage.h  HistoryStorage.hpp  HttpServer.cpp  HttpServer.h  HttpServer.hpp
src/View/: GetNodesBody.h  ImportBody.h
src/application/: Application.cpp  Application.hpp  BoostApplication.cpp  BoostApplication.hpp  CMakeLists.txt  LibeventArgs.hpp  Query.cpp  Query.hpp  QueryResponder.hpp  Respond.hpp  model_diagram.puml
src/application/async/: BoostApplication.cpp  BoostApplication.hpp
src/global/: CMakeLists.txt  ProgramOptions.cpp  ProgramOptions.h
src/logging/: CMakeLists.txt  init.cpp  init.h  init.hpp
src/model/: CMakeLists.txt  FileSystemTree.cpp  FileSystemTree.hpp  HistoryStorage.cpp  HistoryStorage.hpp  HttpServer.cpp  HttpServer.hpp  TreeBuilder.cpp  TreeBuilder.hpp  model_diagram.puml
src/repository/: CMakeLists.txt  FileSystemRepository.cpp  FileSystemRepository.hpp
src/validation/: CMakeLists.txt  DeleteItem.hpp  QueryExt.cpp  QueryExt.hpp  Validator.cpp  Validator.hpp
src/view/: CMakeLists.txt  GetNodesBody.cpp  GetNodesBody.h  GetNodesBody.hpp  ImportBody.cpp  ImportBody.h  ImportBody.hpp
teamcity/: build-config.kt
tests/: CMakeLists.txt  EchoServer.cpp  EchoServer.hpp  ExecuteCurl.cpp  ExecuteCurl.hpp  Makefile  docker-test.sh  test.cpp
tests/integration/: CMakeLists.txt
tests/integration/bench/: CMakeLists.txt
tests/integration/common/: CMakeLists.txt  integration_test.cpp
tests/unit/: CMakeLists.txt
tests/unit/bench/: CMakeLists.txt
tests/unit/common/: CMakeLists.txt  unit_test.cpp
tests/utils/: CMakeLists.txt
tests/utils/curl/: ExecuteCurl.cpp  ExecuteCurl.hpp
tests/utils/echo/: EchoServer.cpp  EchoServer.hpp  QuerySerialization.cpp  QuerySerialization.h
